# ai-job-hunter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration-smoke.yml  scheduled-run.yml
config/: aggregators.yaml  companies.yaml  regions.json  skills_profile.yaml
docs/adr/: 0001-stack-and-datastore.md  0002-ats-adapter-abstraction.md  0003-dedup-and-idempotency-via-sheet-state.md  0004-github-actions-scheduler-ephemeral-state.md
src/ai_job_hunter/: __init__.py  cli.py  config_settings.py  dashboard.py  dedup.py  models.py  pipeline.py  regions.py  registry.py
src/ai_job_hunter/adapters/: ashby.py  bamboohr.py  base.py  greenhouse.py  lever.py  personio.py  recruitee.py  registry_map.py  smartrecruiters.py  workable.py
src/ai_job_hunter/content_generation/: base.py
src/ai_job_hunter/notifiers/: base.py  dispatcher.py  email_notifier.py  telegram_notifier.py
src/ai_job_hunter/scoring/: filters.py  profile.py  scorer.py
src/ai_job_hunter/sheets/: client.py  schema.py  writer.py
tests/fixtures/aggregators/: arbeitnow_sample_response.json  himalayas_sample_response.json  remoteok_sample_response.json  remotive_sample_response.json  weworkremotely_sample_response.xml
tests/fixtures/ashby/: sample_response.json
tests/integration/: test_live_adapters.py
tests/unit/: conftest.py  test_cli.py  test_config_settings.py  test_dashboard.py  test_dedup.py  test_pipeline.py  test_regions.py  test_registry.py  test_smoke.py
tests/unit/adapters/: test_base.py  (+13 more)
(+21 files in other folders)
