[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-hunter"
version = "0.1.0"
description = "Automated pipeline that discovers, scores, and tracks remote DevOps/Platform/SRE/Cloud roles into a Google Sheet."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abraham Ayamigah" }]

dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "click>=8.1",
    "gspread>=6.0",
    "google-auth>=2.28",
    "feedparser>=6.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
ai-job-hunter = "ai_job_hunter.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: hits real network endpoints, excluded from default runs",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
